CommentService structurization
Split processCommnet function into smaller functions
Added label constants