@@ -5,10 +5,12 @@ import com.pulsedesk.pulsedesk.model.Comment;
 import com.pulsedesk.pulsedesk.model.Ticket;
 import com.pulsedesk.pulsedesk.repository.CommentRepository;
 import com.pulsedesk.pulsedesk.repository.TicketRepository;
+import jakarta.validation.constraints.Min;
 import org.springframework.stereotype.Service;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.transaction.annotation.Transactional;
 import com.pulsedesk.pulsedesk.service.HuggingFaceService;
-import com.pulsedesk.pulsedesk.utils.ClassificationLabels;
+import static com.pulsedesk.pulsedesk.utils.ClassificationLabels.*;
 
 import java.util.List;
 import java.util.Map;
@@ -25,9 +27,11 @@ public class CommentsService {
     @Autowired
     private TicketRepository ticketRepository;
 
+    @Transactional
     public Comment saveComment(Comment comment){
-        processComment(comment);
-        return commentRepository.save(comment);
+        Comment savedComment = commentRepository.saveAndFlush(comment);
+        processComment(savedComment);
+        return savedComment;
     }
 
     public List<Comment> getAllComments(){
@@ -39,73 +43,77 @@ public class CommentsService {
                 .orElseThrow(() -> new ResourceNotFoundException("Comment not found with an id:" + id));
     }
 
-
-    public Comment processComment(Comment comment) {
-        //Check if the comment is a ticket worthy
-        List<Map<String, Object>> relevanceCheck = huggingFaceService.classify(comment.getText(),
-                List.of("real user feedback about a software product or service",
-                        "nonsense, gibberish, or unrelated to software"));
-        if(relevanceCheck == null) return comment;
-        String relevanceLabel = (String) relevanceCheck.get(0).get("label");
-        double relevanceScore = (double) relevanceCheck.get(0).get("score");
-
-        if (relevanceLabel.equals("nonsense, gibberish, or unrelated to software") && relevanceScore >= 0.75) {
-            return comment;
+    public void processComment(Comment comment){
+        if(!isFeedback(comment.getText())){
+            return;
         }
-        else{
-            relevanceLabel = "real user feedback about a software product or service";
+        if(isTicket(comment.getText())){
+            createTicket(comment);
         }
-        List<Map<String, Object>> ticketCheck = huggingFaceService.classify(comment.getText(), List.of("problem or complaint",
-                "compliment or praise"));
-        if (ticketCheck == null) return comment;
+    }
 
-        String topLabel = (String) ticketCheck.get(0).get("label");
-        topLabel = topLabel
-                .replace("problem or complaint", "support ticket")
-                .replace("compliment or praise", "compliment");
+    //Not need (functionally) but really helps when using this model to get more accurate results
+    private boolean isFeedback(String text){
+        List<Map<String, Object>> result = huggingFaceService.classify(text,
+                List.of(FEEDBACK, NONSENSE));
+        if(result == null){
+            return false;
+        }
+        String topLabel = (String) result.getFirst().get("label");
+        double topScore = (double) result.getFirst().get("score");
+        return !(topLabel.equals(NONSENSE) && topScore >= 0.75);
+    }
 
-        if (topLabel.equals("support ticket")) {
-            List<Map<String, Object>> categoryResult = huggingFaceService.classify(comment.getText(),
-                    List.of("software or button not working as expected",
-                            "payment or invoice issue",
-                            "new feature or improvement request",
-                            "problem to my specific account, such as being locked, banned, or losing profile data",
-                            "other"));
-            if(categoryResult == null) return comment;
-            String category = (String) categoryResult.get(0).get("label");
-            category = category
-                    .replace("software or button not working as expected", "bug")
-                    .replace("payment or invoice issue", "billing")
-                    .replace("new feature or improvement request", "feature")
-                    .replace("problem to my specific account, such as being locked, banned, or losing profile data", "account")
-                    .replace("other", "other");
-            //Check if the ticket contains crutial bug or just medium priority
-            List<Map<String, Object>> criticalCheck = huggingFaceService.classify(comment.getText(),
-                    List.of("critical system failure or data loss", "minor or moderate issue"));
-            if(criticalCheck == null) return comment;
-            String criticalLabel = (String) criticalCheck.get(0).get("label");
+    private boolean isTicket(String text){
+        List<Map<String, Object>> result = huggingFaceService.classify(text,
+                List.of(PROBLEM, COMPLIMENT));
+        if(result == null){
+            return false;
+        }
+        return PROBLEM.equals(result.getFirst().get("label"));
+    }
 
-            String priority;
-            if (criticalLabel.equals("critical system failure or data loss")) {
-                priority = "high";
-            } else {
-                //Check if the ticket is about functional bug or just cosmetic (low priority)
-                List<Map<String, Object>> cosmeticCheck = huggingFaceService.classify(comment.getText(),
-                        List.of("something is not working or broken",
-                                "visual or cosmetic issue like font color or spelling"));
-                String cosmeticLabel = (String) cosmeticCheck.get(0).get("label");
-                priority = cosmeticLabel.equals("visual or cosmetic issue like font color or spelling") ? "low" : "medium";
-            }
-            String titleText = comment.getText().length() > 50 ? comment.getText().substring(0, 50) + "..." : comment.getText();
-            String title = "[" + category.toUpperCase() + "][" + priority.toUpperCase() + "] " + titleText;
-            String summary = comment.getText().length() > 150 ? comment.getText().substring(0, 150) + "..." : comment.getText();
+    private String resolveCategory(String text){
+        List<Map<String, Object>> result = huggingFaceService.classify(text,
+                List.of(CAT_BUG, CAT_BILLING, CAT_FEATURE, CAT_ACCOUNT, CAT_OTHER));
+        if(result == null){
+            return "other";
+        }
+        String topLabel = (String) result.getFirst().get("label");
+        return CATEGORY_MAP.getOrDefault(topLabel, "other");
+    }
 
-            Ticket ticket = new Ticket();
-            //Setting ticket information
-            {ticket.setText(comment.getText()); ticket.setAuthor(comment.getAuthor()); ticket.setTitle(title); ticket.setSummary(summary); ticket.setPriority(priority); ticket.setCategory(category);}
-            ticketRepository.save(ticket);
+    private String resolvePriority(String text){
+        List<Map<String, Object>> result = huggingFaceService.classify(text,
+                List.of(CRITICAL, MINOR));
+        if(CRITICAL.equals(result.getFirst().get("label"))){
+            return "high";
         }
 
-        return comment;
+        List<Map<String, Object>> cosmeticResult = huggingFaceService.classify(text,
+                List.of(BROKEN, COSMETIC));
+        if(cosmeticResult == null){
+            return "medium";
+        }
+        return (COSMETIC.equals(cosmeticResult.getFirst().get("label")) ? "low" : "medium");
+    }
+
+    private void createTicket(Comment comment){
+        String text = comment.getText();
+        String category = resolveCategory(text);
+        String priority = resolvePriority(text);
+
+        String titleText = text.length() > 50 ? text.substring(0, 50) + "..." : text;
+        String title = "[" + category.toUpperCase() + "] [" + priority.toUpperCase() + "] " + titleText;
+        String summary = text.length() > 150 ? text.substring(0, 150) + "..." : text;
+
+        Ticket ticket = new Ticket();
+        ticket.setText(text);
+        ticket.setCategory(category);
+        ticket.setPriority(priority);
+        ticket.setTitle(title);
+        ticket.setSummary(summary);
+        ticket.setAuthor(comment.getAuthor());
+        ticketRepository.save(ticket);
     }
 }
